--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "@angular/platform-browser": "~10.0.2",
     "@angular/platform-browser-dynamic": "~10.0.2",
     "@angular/router": "~10.0.2",
+    "@ngx-formly/core": "^5.0.0",
+    "@ngx-formly/ng-zorro-antd": "^0.0",
+    "@ngx-formly/schematics": "^5.8.1",
+    "ng-zorro-antd": "^9.2.2",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
@@ -26,7 +30,7 @@
   "devDependencies": {
     "@angular-builders/custom-webpack": "^9.2.0",
     "@angular-devkit/build-angular": "~0.1000.1",
-    "@angular/cli": "~10.0.1",
+    "@angular/cli": "^10.0.1",
     "@angular/compiler-cli": "~10.0.2",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
